--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@docusaurus/module-type-aliases": "3.9.2",
     "@docusaurus/tsconfig": "3.9.2",
     "@docusaurus/types": "3.9.2",
+    "csv-parse": "^6.1.0",
+    "svg-parse": "^1.3.2",
     "typescript": "~5.6.2"
   },
   "browserslist": {
