--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@docusaurus/core": "3.9.2",
     "@docusaurus/preset-classic": "3.9.2",
     "@mdx-js/react": "^3.0.0",
+    "@types/react": "^19.2.7",
+    "antd": "^6.1.4",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.19",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -27,8 +30,11 @@
     "@docusaurus/module-type-aliases": "3.9.2",
     "@docusaurus/tsconfig": "3.9.2",
     "@docusaurus/types": "3.9.2",
+    "autoprefixer": "^10.4.23",
     "csv-parse": "^6.1.0",
+    "postcss": "^8.5.6",
     "svg-parse": "^1.3.2",
+    "tailwindcss": "^3.4.19",
     "typescript": "~5.6.2"
   },
   "browserslist": {
